--- a/DOM-3/Task-3/style.css
+++ b/DOM-3/Task-3/style.css
@@ -3,6 +3,13 @@
     margin: 0;
     box-sizing: border-box;
 }
+input{
+    width: 300px;
+    height: 50px;
+    font-size: 20px;
+    position: relative;
+    left: 600px;
+}
 #btn{
     margin-left: 100px;
     margin-top: 100px;
@@ -14,5 +21,8 @@
     margin-top: 30px;
     margin-left: 100px;
     width: 500px;
+   
+
+    
     
 }
