--- a/AYtap.az/Frontend/style/index.css
+++ b/AYtap.az/Frontend/style/index.css
@@ -2,10 +2,13 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .container{
+    width: 100%;
     height: 60px;
+
     background-color: black;
     color: #fff;
     display: flex;
@@ -13,8 +16,8 @@
     justify-content: space-between;
     
 }
-.logo{
-    margin-left: 30px;
+.logo h2{
+    margin-left: 30px;    
 }
 .logo span{
     font-size: 18px;
@@ -33,6 +36,9 @@
     width: 100px;
     height: 30px;
     cursor: pointer;
+    background-color: green;
+    color: #fff;
+    border: 0;
     
     
 }
