--- a/AYtap.az/Frontend/style/profile.css
+++ b/AYtap.az/Frontend/style/profile.css
@@ -2,7 +2,51 @@
     margin: 0;padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+#h1{
+    display: none;
+}
+.div{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
 
+}
+.box{
+    width: 790px;
+    
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid;
+
+}
+.box input {
+    width: 400px;
+    height: 40px;
+    font-size: 20px;
+    margin-top: 10px;
+    margin: 10px auto;
+    position: relative;
+    left: 170px;
+    
+}
+.box button{
+    width: 200px;
+    height: 40px;
+    color:#fff;
+    background-color: green;
+    cursor: pointer;
+    position: relative;
+    top: 70px;
+    right: 238px;
+    border: 0;
+    border-radius: 15px;
+   
+}
 #infos{
     width: 300px;
     height: 300px;
@@ -10,6 +54,7 @@
     border: 1px solid;
     text-align: center;
     line-height: 50px;
+    display: none;
 
 }
 
