--- a/AYtap.az/Frontend/style/profile.css
+++ b/AYtap.az/Frontend/style/profile.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
 }
 #h1{
     display: none;
@@ -16,7 +17,7 @@
 }
 .box{
     width: 790px;
-    
+    background-color: rgb(121, 255, 255);
     height: 500px;
     display: flex;
     justify-content: center;
@@ -79,3 +80,34 @@ h1{
     text-align: center;
     margin-top: 30px;
 }
+.text{
+    margin-left: 130px;
+}
+.sign{
+    position: relative;
+   
+    top: 130px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ 
+
+}
+.sign{
+    margin: 0 20px;
+    width: 500px;
+   
+}
+.sbutton{
+   display: flex;
+   align-items: center;
+   justify-content: space-around;
+    height: 40px;
+    width: 160px;
+    background-color: green;
+    cursor: pointer;
+    border-radius: 15px;
+    color: #fff;
+    position: relative;
+}
+
