--- a/AYtap.az/Frontend/style/car.css
+++ b/AYtap.az/Frontend/style/car.css
@@ -2,31 +2,16 @@
   padding: 0;margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-.header{
-    display: flex;
-    justify-content: center;
-    height: 50px;
-    width: 600px;
-    margin:40px auto ;
-    
-}
-.header h2{
-    margin-left: 15px;
-}
-.photo{
-    width: 600px;
-    height: 500px;
-    display: flex;
-    margin: auto;
+.car{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 img{
-    height: 500px;
-    width: 600px;
-    
-}
-.description{
-    height: 300px;
-    width: 600px;
-   
-    margin: 40px auto;
+  margin: 50px auto;
+  height: 450px;
+  width: 550px;
 }
