--- a/testreact/vite-project/src/components/style.css
+++ b/testreact/vite-project/src/components/style.css
@@ -3,9 +3,20 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 24px;
-    margin: 30px auto;
+    margin: 20px auto;
 
 
+}
+
+
+button{
+    width: 200px;
+    height: 50px;
+    background-color: rgb(141, 245, 245);
+    cursor: pointer;
+}
+ul{
+    list-style-type: decimal;
 }
 .div{
     display: flex;
