--- a/navbar_React/src/css/style.css
+++ b/navbar_React/src/css/style.css
@@ -11,10 +11,17 @@
     align-items: center;
     
 }
+.user{
+    margin: 1rem;
+    font-weight: bold;
+    font-size: larger;
+    text-decoration: none;
+    color: #191919;
+}
 .links{
     color: aliceblue;
     text-decoration: none;
-    margin-right: 20px;
+    margin-right: 1rem;
     font-size: 20px;
 
 
