--- a/React_Project/src/css/style.css
+++ b/React_Project/src/css/style.css
@@ -7,7 +7,7 @@
     padding: 0;margin: 0;
     box-sizing: border-box;
     text-decoration: none;
-    color: #fff;
+   
     font-family: poppins;
 }
 
@@ -42,6 +42,7 @@
     
     padding: 10px 20px;
     border: 2px solid rgba(244, 246, 252, 0.2);
+    color: #fff;
      
     
     display: inline-block;
@@ -70,10 +71,12 @@
     font-weight: 800;
     font-size: 52px;
     width: 600px;
+    color: #fff;
 }
 .footer{
     width: 600px;
     margin-top: 30px;
+    color: #fff;
     
 }
 .left {
@@ -81,6 +84,7 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 height: 550px;
+color: #fff;
 
 
 }
@@ -111,11 +115,16 @@ height: 550px;
     display: flex;
     justify-content: space-between;
     width: 345px;
+    color: #fff;
     
     
 }
 .button2{
     position: relative;
     top: 88px;
+    color: #fff;
     
+}
+.price{
+    color: #fff;
 }
