--- a/React_Project/src/css/homestyle.css
+++ b/React_Project/src/css/homestyle.css
@@ -2,14 +2,37 @@
     padding: 0;margin: 0;
     box-sizing: border-box;
 }
-.main{
+.main1{
     background-color: rgba(244, 246, 252, 1);
     height: 570px;
-}
-.container{
+  
+    margin: 0;
     
-    margin: 0 4.5em;
+}
+.container1{
+    
+    margin: 4em 4.5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
+.title1{
+    font-size: 46px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+.left1{
+    color:black;
+    width: 400px;
+
+
+}
+
+.Getbtn{
+    color: rgba(36, 5, 242, 1);
+    font-weight: 700;
+    }
+.footerr{
+    margin-bottom: 20px;
+}    
