--- a/React_Project/src/css/homestyle.css
+++ b/React_Project/src/css/homestyle.css
@@ -2,16 +2,18 @@
     padding: 0;margin: 0;
     box-sizing: border-box;
 }
+
 .main1{
     background-color: rgba(244, 246, 252, 1);
     height: 570px;
-  
-    margin: 0;
+
     
 }
 .container1{
     
-    margin: 4em 4.5em;
+    margin: 0 4.5em;
+    padding: 8em 0;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -35,4 +37,11 @@
     }
 .footerr{
     margin-bottom: 20px;
-}    
+} 
+.arrow{
+    margin-left: 20px;
+    position: relative;
+    top: 3px;
+    color: rgba(36, 5, 242, 1);
+}   
+
