--- a/React_Project/src/css/view.css
+++ b/React_Project/src/css/view.css
@@ -29,6 +29,20 @@
 .opacityimg{
     background-image:url('../assets/Rectangle.svg');
     height: 500px;
-    width: 300px;
-    border: 1px solid;
+    width: 500px;
+    background-repeat: no-repeat;
+    margin-bottom: 2em;
+    
+    
+}
+.opp{
+    font-weight: 800;
+    font-size: 26px;
+    color: white;
+    margin:  2em;
+    padding: 12em 0;
+} 
+.lorem{
+    margin:  2em;
+    padding: 12em 0;
 }
