--- a/React_Project/src/css/desing.css
+++ b/React_Project/src/css/desing.css
@@ -1,6 +1,6 @@
 
 .maindesing{
-    height: 600px;
+    height: 1000px;
     width: 100%;
     margin-top: 10em;
     
@@ -14,13 +14,15 @@ background-color:  rgba(244, 246, 252, 1);
 .centerdiv{
     margin-top: 4em;
     width: 600px;
-    
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 .centerdiv div{
     font-weight: 700;
+    /* margin-bottom: 2em;
+    margin-top: 2em; */
 }
 .solve{
     font-weight: 800;
@@ -30,7 +32,30 @@ background-color:  rgba(244, 246, 252, 1);
     flex-direction: column;
     align-items: center;
 }
+
+.box{
+    width: 400px;
+    height: 300px;
+    margin-left: 10px;
+    gap: 70px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+}
+.box img{
+    margin: 2em 1.6em ;
+    height: 27px;
+    width: 32px;
+}
 .boxes{
-    /* display: flex;
-    background-color: red; */
+  height: 500px;
+  width: 1400px;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  margin: 3em 0;
+  margin-left: 4.5em;
+
+ 
+
 }
