--- a/React_Project/src/css/input.css
+++ b/React_Project/src/css/input.css
@@ -1,10 +1,5 @@
-.inputright{
-    
-    /* height: 550px;
-    width: 600px; */
-
-}
-.inputmain{
-    display: flex;
-    justify-content: end;
+.sekil{
+    width: 100%;
+    cursor: pointer;
+    height: 100%;
 }
