--- a/React_Project/src/css/blog.css
+++ b/React_Project/src/css/blog.css
@@ -21,6 +21,16 @@
 
     
 }
+.blog-infoo{
+    display: flex;
+   
+}
+.bbb{
+    display: flex;
+    height: 600px;
+    width: 100%;
+    border: 2px solid;
+}
 .blog-header{
     font-size: 20px;
     font-weight: 500;
