--- a/Zustand/src/restoran.css
+++ b/Zustand/src/restoran.css
@@ -1,12 +1,17 @@
-
+*{
+    text-decoration: none;
+    color: #212121;
+}
 .namediv{
     height: 300px;
     width: 400px;
     border: 1px solid;
+    text-align: center;
+    text-decoration: none;
 
 }
 .menudiv{
-    height: 800px;
+    height: 100vh;
     width: 100%;
     margin:  auto;
     
