--- a/React_Project/src/css/desing.css
+++ b/React_Project/src/css/desing.css
@@ -24,6 +24,9 @@ background-color:  rgba(244, 246, 252, 1);
     /* margin-bottom: 2em;
     margin-top: 2em; */
 }
+.features{
+    margin-top: 2em;
+}
 .solve{
     font-weight: 800;
     font-size: 40px;
