--- a/React_Project/src/css/question.css
+++ b/React_Project/src/css/question.css
@@ -1,5 +1,6 @@
 .question-main{
     height: 700px;
+   margin-top: 4em;
 }
 .question-container{
     padding: 5em 4.5em;
@@ -11,6 +12,7 @@
 }
 .q-main{
 width: 700px;
+
 }
 .accordion-item{
     width: 750px;
@@ -54,4 +56,8 @@ width: 700px;
     color: rgba(36, 5, 242, 1);
     font-weight: 600;
     margin-top: 1em;
+}
+.third-prob{
+    width: 600px;
+    color: gray;
 }
