--- a/React_Project/src/Contact/contactcss/contact.css
+++ b/React_Project/src/Contact/contactcss/contact.css
@@ -4,11 +4,16 @@
   justify-content: center;
   margin-top: 4em;
   margin-bottom: 2em;
+
+}
+.contact-main *{
+  color: #212121;
 }
 .contact-container {
   width: 1000px;
   height: 750px;
   background-color: rgba(244, 246, 252, 1);
+ 
   border-radius: 16px;
 }
 .name-email {
